--- a/experiences.html
+++ b/experiences.html
@@ -13,12 +13,12 @@
 
 <header>
     <div class="left-section">
-        <a href="index.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">ACCEUIL</a></li>
+            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
             <li><a href="formation.html">FORMATIONS</a></li>
             <li><a href="experiences.html">EXPERIENCES</a></li>
             <li><a href="projets.html">PROJETS</a></li>
