--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -12,7 +12,7 @@
 <body>
 <header >
   <div class="left-section">
-    <a href="index.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
     <small>ADRIEN RAVEL</small>
   </div>
   <nav>
