--- a/indexEnglish.html
+++ b/indexEnglish.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <div class="left-section">
-    <a href="index.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+    <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
     <small>ADRIEN RAVEL</small>
   </div>
   <nav>
@@ -25,7 +25,7 @@
       <li><a href="interetsEnglish.html">INTERESTS</a></li>
     </ul>
   </nav>
-  <a class="drapeau" href="index.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
+  <a class="drapeau" href="pageAcceuil.html"><img class="drapeauImage" src="images/fr-flag.png" alt="English" /></a>
 </header>
 
 <main>
