--- a/projets.html
+++ b/projets.html
@@ -24,28 +24,126 @@
             <li><a href="interets.html">CENTRE D'INTERET</a></li>
         </ul>
     </nav>
-    <a class="drapeau" href="#" onclick="toggleLanguage()"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+    <a class="drapeau" href="projetsEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
 </header>
 
-
 <main>
-    <h2>Projets Académiques</h2>
-    <ul>
-        <li>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE</li>
-        <li>REULOCK:chef de projet</li>
-        <li>ARES: Conception et développement d’un robot avec IA intégrée</li>
-        <li>WULLI: projet d’application qui mesure le taux de suremballage sur un produit. Après avoir scanné un produit, elle lui donne un score de suremballage.</li>
-        <li>Projet Microcontrolleur: PIC18F4550 </li>
-        <li>Projet Robotique: Conception et développement d’un robot avec IA intégrée</li>
-    </ul>
-    <img src="projets.jpg" alt="Projets">
+    <h2>Projets Académiques Longue Durée</h2>
+    <section>
+        <div class="content">
+            <h3 class="title2">ARECE</h3>
+            <p>En tant que Vice-Président Communication et Événement au sein de l'association automobile ARECE de juin 2021 à mai 2023, j'ai contribué activement au développement du logiciel d'un monoplace autonome pour participer à la compétition internationale Formula Student à Silverstone. J'ai coordonné les activités de communication de l'association et organisé des événements clés liés à notre projet. Cette expérience m'a permis de développer mes compétences en gestion de projet, en communication stratégique et en organisation d'événements, tout en acquérant une expertise technique dans le domaine des véhicules autonomes.</p>
+            <p> <em>Vous pouvez en apprendre plus sur ce projet : <a href="https://arece.eu/" target="_blank">Site Web</a></em></p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <h3 class="title2">REULOCK</h3>
+            <p>En tant que chef de projet, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <h3 class="title2">ARES</h3>
+            <p>J'ai principalement travaillé sur la partie <strong>Intelligence Artificielle</strong> du projet au seins de mon équipe de 7 personnes. Notre objectif était de créer un robot capable de prendre et déplacer des cubes vers des emplacements spécifiques. J'ai été responsable de l'implémentation de l'algorithme A* pour le déplacement du robot. En utilisant cet algorithme, j'ai développé une stratégie efficace pour que le robot, planifie ses mouvements afin d'optimiser la collecte des cubes dans le concours organisé en fin d'année. En plus de cela, j'ai également contribué à d'autres aspects du projet tels que <strong>le montage du robot</strong>, <strong> modélisation de certaines pièces</strong>, <strong>la lecture d'images reçues</strong>, er <strong>la communication avec le serveur </strong>.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <h3 class="title2">WULLI</h3>
+            <p>
+                En première année à l'ECE, j'ai travaillé en équipe sur un projet axé sur les enjeux de demain. Nous avons choisi de nous concentrer sur la problématique du suremballage et avons développé la solution WULLI. C'est une application novatrice visant à mesurer le taux de suremballage d'un produit. En utilisant la fonction de scan, l'application attribue un score de suremballage au produit analysé. J'ai contribué activement à toutes les phases du projet, de la conception à la réalisation. Cette expérience m'a permis de développer mes compétences en gestion de projet, en travail d'équipe et en développement d'applications répondant aux besoins sociétaux actuels.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+<br><br>
+    <h2>Projets Académiques Courte Durée</h2>
+    <section>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+        <div class="content">
+            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+    <section>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+        <div class="content">
+            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+    <section>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+        <div class="content">
+            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+    <section>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+        <div class="content">
+            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+
+
+
+
+
+
+    <br><br>
     <h2>Projets Personnel</h2>
-    <ul>
-        <li>Serrure de chambre connectée: Vice-président communication et prototypage chez ARECE</li>
-        <li>Projet Robotique: Conception et développement d’un robot avec IA intégrée</li>
-        <!-- Ajoutez d'autres projets académiques ici -->
-    </ul>
-    <img src="projets.jpg" alt="Projets">
+    <section>
+        <div class="content">
+            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <p>REULOCK:chef de projet.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <p>ARES: Conception et développement d’un robot avec IA intégrée. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+    <section>
+        <div class="content">
+            <p>WULLI: projet d’application qui mesure le taux de suremballage sur un produit. Après avoir scanné un produit, elle lui donne un score de suremballage.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="images">
+            <img src="projets.jpg" alt="Projets">
+        </div>
+    </section>
+
+
+
 </main>
 
 <footer>
