--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<header>
+<header class="normal-header">
     <div class="left-section">
         <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
         <small>ADRIEN RAVEL</small>
@@ -27,6 +27,26 @@
     </nav>
     <a class="drapeau" href="indexEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
 </header>
+<header class="mobile-header">
+    <div class="left-section">
+        <a href="pageAcceuil.html"><img class="profile-picture" src="images/Capture-removebg-preview.png" alt="Photo de profil"></a>
+        <small>ADRIEN RAVEL</small>
+    </div>
+    <nav>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle">&#9776;</label>
+        <ul class="menu">
+            <li><a href="pageAcceuil.html">ACCEUIL</a></li>
+            <li><a href="formation.html">FORMATIONS</a></li>
+            <li><a href="experiences.html">EXPERIENCES</a></li>
+            <li><a href="projets.html">PROJETS</a></li>
+            <li><a href="skills.html">COMPETENCES</a></li>
+            <li><a href="interets.html">CENTRE D'INTERET</a></li>
+        </ul>
+    </nav>
+    <a class="drapeau" href="indexEnglish.html"><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+</header>
+
 
 <main>
     <section id="presentation">
