--- a/interets.html
+++ b/interets.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/pp.jpg">
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66CTB26NJ6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-66CTB26NJ6');
+    </script>
 </head>
 <body>
 
