--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/pp.jpg">
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66CTB26NJ6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-66CTB26NJ6');
+    </script>
 </head>
 <body>
 
@@ -36,9 +45,52 @@
         <li>Conception: Conception 3D sur SolidWorks et 2D sur Illustrator, montage vidéo sur Premiere Pro.</li>
         <li>Electronique: Logiciels de dessins électriques (DesignSpark PCB, Proteus), carte FPGA, VHDL, microcontrôleurs PIC18F4550 (langage assembleur), carte Raspberry et linux.</li>
         <li>Gestion de Projets: Formation « MOOC Gestion De Projet »</li>
-        <!-- Ajoutez d'autres hard skills ici -->
+        <li>Management...</li>
+        <li>DSP, vhdl, mcu, réseaux...</li>
+        <li>Gestion budget...</li>
     </ul>
     <img src="skills.jpg" alt="Hard Skills">
+
+    <h2>Langues</h2>
+    <ul id="languages">
+        <li>
+            <span class="language">Anglais</span>
+            <div class="progress-bar">
+                <div class="progress progress-80"></div>
+            </div>
+            <span class="percentage">80%</span>
+        </li>
+        <li>
+            <span class="language">Français</span>
+            <div class="progress-bar">
+                <div class="progress progress-100"></div>
+            </div>
+            <span class="percentage">100%</span>
+        </li>
+        <li>
+            <span class="language">Espagnol</span>
+            <div class="progress-bar">
+                <div class="progress progress-30"></div>
+            </div>
+            <span class="percentage">30%</span>
+        </li>
+        <li>
+            <span class="language">Allemand</span>
+            <div class="progress-bar">
+                <div class="progress progress-60"></div>
+            </div>
+            <span class="percentage">60%</span>
+        </li>
+        <li>
+            <span class="language">Italien</span>
+            <div class="progress-bar">
+                <div class="progress progress-70"></div>
+            </div>
+            <span class="percentage">70%</span>
+        </li>
+    </ul>
+    <img src="skills.jpg" alt="Hard Skills">
+
 </main>
 
 <footer>
@@ -56,4 +108,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-Ajouter les langues dans hardskilles
