--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -6,8 +6,16 @@
   <title>Adrien Ravel - Experiences</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/pp.jpg">
-
   <script src="script.js"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-66CTB26NJ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-66CTB26NJ6');
+  </script>
 </head>
 <body>
 <header >
