--- a/projets.html
+++ b/projets.html
@@ -100,7 +100,7 @@
         <div  class="glue">
             <h3>QWIRKLE : Initiation au C et aux algorythmes</h3>
             <div class="images">
-                <img class="smallImg" src="projets.jpg" alt="Projets">
+                <img class="smallImg" src=./images/qwirkle.png alt="Projets">
             </div>
             <div class="content">
                 <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
