projets.html + projectEnglish.html

--- a/experiencesEnglish.html
+++ b/experiencesEnglish.html
@@ -28,7 +28,7 @@
       <li><a href="indexEnglish.html">HOME</a></li>
       <li><a href="formationEnglish.html">EDUCATION</a></li>
       <li><a href="experiencesEnglish.html">EXPERIENCES</a></li>
-      <li><a href="projetsEnglish.html">PROJECTS</a></li>
+      <li><a href="projectEnglish.html">PROJECTS</a></li>
       <li><a href="skillsEnglish.html">SKILLS</a></li>
       <li><a href="interetsEnglish.html">INTERESTS</a></li>
     </ul>
