--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
             <li><a href="interets.html">CENTRE D'INTERET</a></li>
         </ul>
     </nav>
-    <a class="drapeau" href="projetsEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
+    <a class="drapeau" href="projectEnglish.html" ><img class="drapeauImage" src="images/en-flag.png" alt="Français" /></a>
 </header>
 
 <main>
@@ -42,7 +42,7 @@
     <section>
         <div class="content">
             <h3 class="title2">ARECE</h3>
-            <p>En tant que Vice-Président Communication et Événement au sein de l'association automobile ARECE de juin 2021 à mai 2023, j'ai contribué activement au développement du logiciel d'un monoplace autonome pour participer à la compétition internationale Formula Student à Silverstone. J'ai coordonné les activités de communication de l'association et organisé des événements clés liés à notre projet. Cette expérience m'a permis de développer mes compétences en gestion de projet, en communication stratégique et en organisation d'événements, tout en acquérant une expertise technique dans le domaine des véhicules autonomes.</p>
+            <p>En tant que <strong>Vice-Président Communication et Événement</strong> au sein de l'association automobile ARECE de juin 2021 à mai 2023, j'ai contribué activement au développement du logiciel d'un monoplace autonome pour participer à la compétition internationale Formula Student à Silverstone. J'ai coordonné les activités de communication de l'association et organisé des événements clés liés à notre projet. Cette expérience m'a permis de développer mes compétences en gestion de projet, en communication stratégique et en organisation d'événements, tout en acquérant une expertise technique dans le domaine des véhicules autonomes.</p>
             <p> <em>Vous pouvez en apprendre plus sur ce projet : <a href="https://arece.eu/" target="_blank">Site Web</a></em></p>
         </div>
         <div class="images">
@@ -56,7 +56,7 @@
         </div>
         <div class="content">
             <h3 class="title2">REULOCK</h3>
-            <p>En tant que chef de projet, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
+            <p>En tant que <strong>chef de projet</strong>, j'ai dirigé une équipe dans la conception d'une solution de fermeture électronique innovante pour les colis réutilisables de l'entreprise Réutec. Notre solution, qui fonctionne avec une alimentation secteur 12V et un embout universel, élimine le besoin d'une batterie intégrée. L'utilisateur scanne simplement le QR-CODE, obtient son code sur la plateforme, branche le colis sur secteur et entre le code pour ouvrir le colis. J'ai acquis des compétences techniques précieuses telles que la <strong>programmation de microcontrôleurs</strong>, la <strong>conception assistée par ordinateur</strong> (CAO) et <strong>la réalisation de circuits électroniques</strong>. J'ai également développé des compétences en <strong>gestion de projet</strong>, <strong>organisation</strong>, <strong>la collaboration en équipe</strong> et <strong>la gestion du temps</strong>.</p>
         </div>
 
     </section>
@@ -83,9 +83,98 @@
     </section>
 
     <br><br><br>
+    <div class="vertical-line"></div>
 
     <h2>Projets Académiques Courte Durée</h2>
     <br>
+    <h2>Quatrième année à l'ECE</h2>
+    <section class="section2">
+        <div class="glue">
+            <h3>Projet Système Embarqué : Télécommande Drône</h3>
+            <div class="images">
+                <img class="smallImg1" src="./images/drone.jpg" alt="Projets">
+            </div>
+            <div class="content">
+                <br><p>Notre projet de télécommande de drone est le fruit du travail acharné de notre équipe de quatre personnes. Nous avons conçu une télécommande innovante qui pilote en radio (NRF24L01) un drone tout en respectant les fréquences réglementaires. L'utilisation d'un écran OLED permet d'afficher en temps réel des informations cruciales, tandis que les deux joysticks assurent un pilotage fluide de l'altitude et de la direction. Grâce à notre choix judicieux du microcontrôleur ATmega328P et à l'intégration d'une centrale inertielle, le drone bénéficie d'une stabilité et d'une précision exemplaires. Ce projet reflète notre passion pour l'innovation technologique et l'ingénierie de pointe.</p>
+            </div>
+        </div>
+        <div  class="glue">
+            <h3>Microcontrolleurs: Réaliser un oscilloscope avec PIC18F4550</h3>
+            <div class="images">
+                <img class="smallImg1" src=./images/mcu.png alt="Projets">
+            </div>
+            <div class="content">
+                <br><p>Notre projet de microcontrôleur, réalisé suite à nos cours dans cette matière, consistait à développer un oscilloscope et un multimètre avec la PIC18F4550, en utilisant l'architecture Harvard. Notre équipe de trois personnes a accompli les étapes suivantes : pour le multimètre, nous avons initialisé le CAN, mis en place des fonctions d'interruption ADC, réalisé la conversion en millivolts, affiché les résultats sur un affichage 7 segments et mesuré les fréquences. Quant à l'oscilloscope, nous avons réussi à implémenter le mode de déclenchement et de fonctionnement à l'aide d'une interruption par bouton.</p>
+            </div>
+        </div>
+    </section>
+
+     <br>
+    <h2>Troisième année à l'ECE</h2>
+    <section class="section2">
+        <div class="glue">
+            <h3>Projet ALEXA</h3>
+            <div class="images">
+                <img class="smallImg" src="./images/alexa.jpg" alt="Projets">
+            </div>
+            <div class="content">
+                <p>Le projet ALEXA portait sur le traitement du signal numérique pour la reconnaissance vocale. Nous avons numérisé le signal phonatoire et extrait les caractéristiques de la voix à l'aide de la technique MFCC. Le modèle GMM a été utilisé pour la reconnaissance du locuteur en modélisant ses caractéristiques vocales. En bonus, nous avons intégré le "processing" pour une interface utilisateur améliorée. Ce projet nous a offert une expérience enrichissante dans le domaine du traitement vocal avancé et du développement de compétences en ingénierie et programmation.</p>
+            </div>
+        </div>
+        <div  class="glue">
+            <h3>Projet Web : Site de vente en ligne</h3>
+            <div class="images">
+                <img class="smallImg" src=./images/wsc.png alt="Projets">
+            </div>
+            <div class="content">
+                <p>Mon projet web consistait à développer un site de vente d'objets en ligne, offrant trois catégories d'achats : la vente classique sur internet, la vente avec négociation similaire à Vinted, ainsi que la vente aux enchères. Pour gérer efficacement les utilisateurs, nous avons créé une base de données comprenant les profils d'administrateurs, de vendeurs et de clients. Pour faciliter la gestion de la base de données, nous avons utilisé XAMPP, qui s'est avéré être un outil efficace. Ce projet nous a permis de mettre en pratique nos compétences en développement web et de créer une plateforme d'e-commerce dynamique et fonctionnelle.</p>
+            </div>
+        </div>
+        <div  class="glue">
+            <h3>Projet Impulse : le campus connecté</h3>
+            <div class="images">
+                <img class="smallImg" src="images/campusConnecte.PNG" alt="Projets">
+            </div>
+            <div class="content">
+                <p>Le projet "Impulse", d'une durée d'un semestre, a été une aventure enrichissante en groupe de six étudiants. Nous avons choisi de réinventer l'éducation en repensant le campus connecté de demain, suite à la pandémie. Notre innovation clé était un tableau connecté aux salles de cours et caméras, permettant un apprentissage flexible et individuel. Cette approche répondait aux besoins actuels de l'apprentissage à distance. Le projet nous a permis de développer des compétences en collaboration, recherche et conception de solutions novatrices. Nous sommes fiers d'avoir contribué à façonner l'avenir de l'éducation avec notre idée du campus connecté.</p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <h2>Deuxième année à l'ECE</h2>
+    <section class="section2">
+        <div class="glue">
+            <h3>Station de ski : Projets IA et Algorythmes de parcours</h3>
+            <div class="images">
+                <img class="smallImg" src="./images/stationSki.png" alt="Projets">
+            </div>
+            <div class="content">
+                <p>Le projet d'IA et d'algorithmes de parcours a été réalisé en équipe de quatre personnes. Nous avons développé un logiciel en C++ qui permet de calculer en temps réel le chemin le plus court dans une station de ski après avoir analysé tous les flux. L'utilisateur peut choisir sa destination, que ce soit une piste de ski, un poste de secours ou un restaurant, et le logiciel lui indique le trajet le plus rapide pour y parvenir. Cette solution a permis d'optimiser les déplacements au sein de la station et d'améliorer l'expérience des skieurs et des visiteurs.</p>
+            </div>
+        </div>
+        <div  class="glue">
+            <h3>Projet VHDL : Feu tricolore sur FPGA</h3>
+            <div class="images">
+                <img class="smallImg" src=./images/vhdl.png alt="Projets">
+            </div>
+            <div class="content">
+                <p>Mon projet de VHDL était de créer un croisement routier en utilisant un FPGA. J'ai réussi à afficher les feux routiers aux quatre intersections, ainsi que les feux pour les piétons. J'ai mis en place un compteur synchrone pour générer un signal d'horloge ralentissant le signal de la DE-10 lite de 50MHz à 1Hz. Pour informer les automobilistes, j'ai utilisé une machine de Moore pour implémenter deux feux tricolores. Quant aux piétons, j'ai développé un système pour leur indiquer l'état du feu et le temps d'attente restant, affiché sur un 7seg ou via un effet sonore.</p>
+            </div>
+        </div>
+        <div  class="glue">
+            <h3>Jeu de cartes POKEMON en ligne</h3>
+            <div class="images">
+                <img class="smallImg" src="images/ecemon.png" alt="Projets">
+            </div>
+            <div class="content">
+                <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+
     <h2>Première année à l'ECE</h2>
     <section class="section2">
         <div class="glue">
@@ -94,7 +183,7 @@
                 <img class="smallImg" src="./images/projetElec1.jpg" alt="Projets">
             </div>
             <div class="content">
-                <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>En première année pendant le confinement, j'ai réalisé un projet de synthétiseur numérique chez moi. Le bloc VCO utilisait un NE555 pour générer un signal rectangulaire dont la fréquence dépendait des touches du clavier. Un AOP servait d'intégrateur pour modifier la forme du signal et un potentiomètre permettait de sculpter le son. Le VCF venait ensuite, modifiant le signal de sortie de l'intégrateur à l'aide de deux potentiomètres. Enfin, le signal de sortie était envoyé au haut-parleur pour entendre le son synthétisé. Ce projet m'a initié à la synthèse sonore et à la manipulation des composants électroniques.</p>
             </div>
         </div>
         <div  class="glue">
@@ -103,59 +192,22 @@
                 <img class="smallImg" src=./images/qwirkle.png alt="Projets">
             </div>
             <div class="content">
-                <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Mon premier programme en C a été une expérience passionnante où j'ai implémenté en équipe de 3 le jeu de société Qwirkle en console. nous avons crée une version interactive et fonctionnelle du jeu. Les joueurs pouvaient placer des tuiles avec différentes formes et couleurs pour avoir des combinaisons gagnantes. Ce projet m'a permis d'acquérir des compétences en programmation et de me familiariser avec les concepts du langage C.</p>
             </div>
         </div>
         <div  class="glue">
-            <h3>Street VS HealthyFood : Tower defense avec interface graphique Allegro</h3>
+            <h3>Tower defense :Street VS HealthyFood </h3>
             <div class="images">
-                <img class="smallImg" src="projets.jpg" alt="Projets">
+                <img class="smallImg" src="./images/streetVSfood.png" alt="Projets">
             </div>
+            <br>
             <div class="content">
-                <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Mon premier projet avec interface graphique Allegro est un tower defense intitulé "Street VS Healthy food", s'inspirant du jeu Zombie VS Plant. En équipe, nous avons conçu les designs en interne. Le jeu, programmé en C, offre une expérience captivante où les joueurs doivent défendre leur territoire contre des vagues d'ennemis malsains. L'interface graphique Allegro a été un atout essentiel pour créer des graphismes attrayants et une expérience de jeu fluide. Ce projet m'a permis de développer mes compétences en programmation et de créer un jeu divertissant avec une interface graphique conviviale.</p>
             </div>
         </div>
     </section>
-
-
 
     <br><br>
-    <h2>Projets Personnel</h2>
-    <section>
-        <div class="content">
-            <p>Projet Automobile ARECE: Vice-président communication et prototypage chez ARECE. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="images">
-            <img src="projets.jpg" alt="Projets">
-        </div>
-    </section>
-    <section>
-        <div class="content">
-            <p>REULOCK:chef de projet.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="images">
-            <img src="projets.jpg" alt="Projets">
-        </div>
-    </section>
-    <section>
-        <div class="content">
-            <p>ARES: Conception et développement d’un robot avec IA intégrée. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="images">
-            <img src="projets.jpg" alt="Projets">
-        </div>
-    </section>
-    <section>
-        <div class="content">
-            <p>WULLI: projet d’application qui mesure le taux de suremballage sur un produit. Après avoir scanné un produit, elle lui donne un score de suremballage.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="images">
-            <img src="projets.jpg" alt="Projets">
-        </div>
-    </section>
-
-
-
 </main>
 
 <footer>
